fix overflow html

--- a/company/css/styles.css
+++ b/company/css/styles.css
@@ -595,7 +595,7 @@ footer {
       margin: 0 0 0 70px; } }
 
 @media (max-width: 991px) {
-  html, body.overflow-hidden {
+  html.overflow-hidden, body.overflow-hidden {
     position: relative;
     height: 100%;
     overflow: hidden; }
